security cores configuration